# Blog-Code-Samples

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
assets/: LocalConfig.cmake.template  LocalConfig.json.template
src/: Accounter.cpp  Accounter.h  Any.h  Blob.h  CheckConcept.h  CopyMover.cpp  CopyMover.h  Dummy.h  DummyVector.h  EnableIf.h  Function.h  HasEntity.h  HasFunction.h  HasSortFunction.h  Indirectors.cpp  Indirectors.h  MixStaticWithDynamic.h  Person.cpp  Person.h  Pods.h  Printer.h  Printers.h  ReturnHeadache.h  Sort.h  StaticIf.h  Storage.cpp  Storage.h  Variant.cpp  Variant.h  main.cpp
